@@ -18,7 +18,7 @@ public class LongType extends AbstractType
 
         long L1 = ByteBuffer.wrap(o1).order(ByteOrder.LITTLE_ENDIAN).getLong();
         long L2 = ByteBuffer.wrap(o2).order(ByteOrder.LITTLE_ENDIAN).getLong();
-        return new Long(L1).compareTo(L2);
+        return Long.valueOf(L1).compareTo(Long.valueOf(L2));
     }
 
     public String getString(byte[] bytes)
